feat(service): LottoService에 결과 계산 및 DTO 변환 메서드 추가